--- a/src/App.css
+++ b/src/App.css
@@ -133,8 +133,8 @@ h1 {
   position: absolute;
   padding: 16px;
   width: 100%;
-  opacity: 0;
-  top: 0;
+  opacity: 1;
+  top: 0px;
   color: #f9d3b4;
 }
 
@@ -177,6 +177,17 @@ h1 {
   margin-top: 5px;
   font-family: "Roboto Slab", serif;
   color: #f9d3b4;
+}
+
+.movie div:nth-of-type(3) p {
+  font-family: "Raleway", sans-serif;
+  color: white;
+  letter-spacing: 1px;
+  margin-top: 5px;
+  background-color: #222527;
+  width: fit-content;
+  border-radius: 10px;
+  padding: 8px;
 }
 
 .movie:hover div:nth-of-type(2) {
