--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,12 +9,12 @@
 }
 
 :root {
-  --font-roboto: "Roboto Slab", serif;
-  --font-raleway: "Raleway", sans-serif;
+  /* --font-roboto: "Roboto Slab", serif;
+  /* --font-raleway: "Raleway", sans-serif; */ 
 }
 
 body {
-  font-family: var(--font-roboto);
+  /* font-family: var(--font-roboto); */
   background-color: #212426;
 }
 
@@ -63,7 +60,7 @@ h1 {
   flex: 1;
   border: none;
   font-size: 1.5rem;
-  font-family: var(--font-raleway);
+  /* font-family: var(--font-raleway); */
   font-weight: 500;
   padding-right: 1rem;
 
@@ -83,7 +80,7 @@ h1 {
   border-radius: 0.5rem;
   margin-left: 15px;
   color: #a1a1a1;
-  font-family: var(--font-raleway);
+  font-family: var(--font-raleway); 
   font-weight: 900;
   letter-spacing: 0.75px;
   font-size: 1.25rem;
@@ -105,7 +102,7 @@ h1 {
 .empty h2 {
   font-size: 1.25rem;
   color: #f9d3b4;
-  font-family: var(--font-raleway);
+  /* font-family: var(--font-raleway); */
 }
 
 .container {
