--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   margin: 0;
@@ -7,13 +8,7 @@
   box-sizing: border-box;
 }
 
-:root {
-  --font-roboto: "Roboto Slab", serif;
-  --font-raleway: "Raleway", sans-serif;
-}
-
 body {
-  font-family: var(--font-roboto);
   background-color: #212426;
 }
 
@@ -34,10 +29,9 @@ h1 {
     rgba(249, 211, 180, 1) 0%,
     rgba(249, 211, 180, 0) 100%
   );
-  -webkit-background-clip: text;
   background-clip: text;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  width: -moz-fit-content;
   width: fit-content;
 }
 
@@ -60,7 +54,6 @@ h1 {
   flex: 1;
   border: none;
   font-size: 1.5rem;
-  font-family: var(--font-raleway);
   font-weight: 500;
   padding-right: 1rem;
 
@@ -75,21 +68,6 @@ h1 {
   cursor: pointer;
 }
 
-/* .search button {
-  padding: 20px 40px;
-  border-radius: 0.5rem;
-  margin-left: 15px;
-  color: #a1a1a1;
-  font-family: var(--font-raleway);
-  font-weight: 900;
-  letter-spacing: 0.75px;
-  font-size: 1.25rem;
-  cursor: pointer;
-  background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-} */
-
 .empty {
   width: 100%;
   margin-top: 3rem;
@@ -102,7 +80,6 @@ h1 {
 .empty h2 {
   font-size: 1.25rem;
   color: #f9d3b4;
-  font-family: var(--font-raleway);
 }
 
 .container {
@@ -134,7 +111,7 @@ h1 {
   padding: 16px;
   width: 100%;
   opacity: 0;
-  top: 0px;
+  top: 0;
   color: #f9d3b4;
 }
 
@@ -165,7 +142,6 @@ h1 {
 }
 
 .movie div:nth-of-type(3) span {
-  font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   font-size: 13px;
   letter-spacing: 2px;
@@ -175,7 +151,6 @@ h1 {
 
 .movie div:nth-of-type(3) h3 {
   margin-top: 5px;
-  font-family: "Roboto Slab", serif;
   color: #f9d3b4;
 }
 
@@ -226,7 +201,7 @@ h1 {
   }
 
   .movie {
-    width: "100%";
+    width: '100%';
     margin: 1rem;
   }
 }
