--- a/styles/globals.css
+++ b/styles/globals.css
@@ -143,9 +143,9 @@ h1 {
 
 .movie div:nth-of-type(3) span {
   text-transform: uppercase;
-  font-size: 13px;
+  /* font-size: 13px;
   letter-spacing: 2px;
-  font-weight: 500;
+  font-weight: 500; */
   color: #f0f0f0;
 }
 
